# informath

./: Makefile  informath.cabal
grammars/: Examples.gf  ExamplesFunctor.gf
share/: baseconstants.dk
src/: AnnotateDedukti.hs  BuildConstantTable.hs  CommonConcepts.hs  Dedukti2Agda.hs  Dedukti2Lean.hs  Dedukti2MathCore.hs  Dedukti2Rocq.hs  Environment.hs  Informath2MathCore.hs  InformathAPI.hs  MathCore2Dedukti.hs  MathCore2Informath.hs  ParseInformath.hs  ProofText.hs  Semantics.hs  SpecialConstants.hs  Utils.hs
test/: gflean-data.txt  profileconstants.dkgf
