cabal-version:       3.6
name:                informath
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD-3-Clause
author:              Aarne Ranta
maintainer:          aarne.ranta@gmail.com
category:            Development
build-type:          Simple


executable RunInformath
  main-is:             RunInformath.hs
  other-modules:
    CommonConcepts
    AnnotateDedukti
    Dedukti2Agda
    Dedukti2Rocq
    Dedukti2Lean
    DeduktiOperations
    Environment
    Informath
    Lexing
    ParseInformath
    Ranking
    Agda.AbsAgda
    Agda.ComposOp
    Agda.PrintAgda
    Rocq.AbsRocq
    Rocq.ComposOp
    Rocq.PrintRocq
    Dedukti.AbsDedukti
    Dedukti.ComposOp
    Dedukti.ErrM
    Dedukti.LexDedukti
    Dedukti.ParDedukti
    Dedukti.PrintDedukti
    Lean.AbsLean
    Lean.ComposOp
    Lean.PrintLean
    BuildConstantTable
    Dedukti2MathCore
    MathCore2Informath
    Informath2MathCore
    MathCore2Dedukti
    InformathAPI
    Utils
    SpecialConstants
    Semantics
    ProofText

  hs-source-dirs:      app src web src/typetheory
  ghc-options:         -O2
  build-depends:       base >=4.18 && <5,
                       containers,
                       mtl,
                       array,
                       json,
                       gf >= 3.12
  default-language:    Haskell2010